# sup

./: .gitignore  .pre-commit-hooks.yaml  PROOF_OF_TEST.md  README.md  action.yml  pyproject.toml
proof/go/: go.mod
proof/node/: package.json
proof/python/: requirements.txt
src/sup/: __init__.py  allowlist.py  cache.py  cli.py  config.py  lookup.py  models.py  quarantine.py
src/sup/commands/: allow.py  cache_cmd.py  check.py  config_cmd.py  info.py  init.py  rendering.py  sbom.py  wrap.py
src/sup/parsers/: __init__.py  base.py  detect.py  go.py  node.py  python.py  ruby.py  (+1 more)
tests/: conftest.py  test_allowlist.py  test_allowlist_edges.py  test_cache.py  test_config.py  test_lookup.py  test_lookup_edges.py  test_quarantine.py  test_rendering.py
tests/fixtures/: Cargo.toml  go.mod  package-lock.json  package.json  pyproject.toml  requirements.txt  sbom-cyclonedx.json  sbom-spdx.json
tests/test_commands/: test_allow.py  test_allow_edges.py  test_cache_cmd.py  test_check.py  test_check_edges.py  test_config.py  test_config_edges.py  test_final_gaps.py  test_info.py  test_init.py  test_wrap.py  test_wrap_integration.py
tests/test_parsers/: test_detect.py  test_edges.py  test_go.py  test_node.py  test_python.py  test_ruby.py  test_rust.py
tests/test_registries/: test_crates.py  test_error_paths.py  test_go.py  test_init.py  test_npm.py  test_pypi.py  test_response_size.py  test_rubygems.py
tests/test_sbom/: test_enrich.py  test_enrich_edges.py  test_parse.py  test_parse_edges.py  test_purl.py  test_purl_edges.py  test_sbom_commands.py  test_sbom_edges.py
(+11 files in other folders)
