[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sup-quarantine"
version = "0.1.0"
description = "Supply chain quarantine tool — enforce age gates on dependency updates"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "click>=8.2,<9",
    "rich>=14.0,<15",
    "tomli-w>=1.0,<2",
    "packaging>=21.0",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.scripts]
sup = "sup.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
